5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1752_1527.log
== TEST (2019-05-16 17:16:54) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

fors = sf + pf
lok = sl + pl
forse = 0
loki = 0
ano = 0

while(forse > loki):
	
	ano = ano + 1
	print(ano)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:19:04) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

fors = sf * pf
lok = sl * pl
forse = 0
loki = 0
ano = 0

while(forse > loki):
	
	ano = ano + 1
	print(ano)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:34) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

fors = sf * pf
lok = sl * pl
forse = 0
loki = 0
ano = 0

while(forse > loki):
	var1 = (fors - lok)
	ano = ano + 1
	print(ano)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:21:06) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

fors = sf * pf
lok = sl * pl
forse = 0
loki = 0
ano = 0

while(forse > loki):
	var1 = (fors - lok)
	ano = ano + 1
	print(ano)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:22:49) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

fors = sf * pf
lok = sl * pl
forse = 0
loki = 0
ano = 0

while(forse > loki):
	forse = fors - lok
	ano = ano + 1
	print(ano)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:19) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

fors = sf * pf
lok = sl * pl
forse = 0
loki = 0
ano = 0

while(forse > loki):
	forse = fors - lok
	ano = ano + 1
print(ano)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:25:33) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

forse = 0
loki = 0
ano = 0
var1 = sf * pf
var2 = sl * pl

while(forse > loki):
	ano = ano + 1
print(ano)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:25:51) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

forse = 0
loki = 0
ano = 0
var1 = sf * pf
var2 = sl * pl

while(forse > loki):
	ano = ano + 1
	print(ano)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:25:52) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

forse = 0
loki = 0
ano = 0
var1 = sf * pf
var2 = sl * pl

while(forse > loki):
	ano = ano + 1
	print(ano)
-- EXECUTION TIME:
0.145555
-- TEST CASE 1:
---- input:
8000
6000
1.5
4
---- correct output:
12
---- user output:

-- TEST CASE 2:
---- input:
1500
7500
3.2
4
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
9520368741
159874
21.59
54.87
---- correct output:
46
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:25:54) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

forse = 0
loki = 0
ano = 0
var1 = sf * pf
var2 = sl * pl

while(forse > loki):
	ano = ano + 1
	print(ano)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:59) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

forse = 0
loki = 0
ano = 0
var1 = sf * pf
var2 = sl * pl

while(forse > loki):
	taxa = 
	ano = ano + 1
	print(ano)
-- ERROR:
File "XXXX", line 13
    taxa = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:02) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

forse = 0
loki = 0
ano = 0
var1 = sf * pf
var2 = sl * pl

while(forse > loki):
	taxa = 
	ano = ano + 1
	print(ano)
-- ERROR:
File "XXXX", line 13
    taxa = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:28:20) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

forse = 0
loki = 0
ano = 0
var1 = sf * pf
var2 = sl * pl

while(forse > loki):
	taxa = var1 - var2
	ano = ano + 1
	print(ano)
-- EXECUTION TIME:
0.158087
-- TEST CASE 1:
---- input:
8000
6000
1.5
4
---- correct output:
12
---- user output:

-- TEST CASE 2:
---- input:
1500
7500
3.2
4
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
9520368741
159874
21.59
54.87
---- correct output:
46
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:20) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

forse = 0
loki = 0
ano = 0
var1 = sf * pf
var2 = sl * pl

while(forse > loki):
	taxa = var1 - var2
	ano = ano + 1
	print(ano)
-- ERROR:
File "XXXX", line 13
    taxa = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:18) 
-- CODE:
sf = int(input("Seguidores do deus Forseti: "))
sl = int(input("Seguidores do deus Loki: "))
pf = float(input("Percentual anual do deus Forseti: "))
pl = float(input("Percentual anual do deus Loki: "))

forse = 0
loki = 0
ano = 0
var1 = sf * pf
var2 = sl * pl

while(forse > loki):
	taxa = var1 - var2
	ano = ano + 1
	print(ano)
-- ERROR:
File "XXXX", line 13
    taxa = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
